Projeto Dimdim arrumacao

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -2,6 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <meta name="autor " content="Silvan Miller ">
+    <meta name="description " content="Site desenvolvido por Silvan Miller ">
+    <meta name="keywords " content="front-end, completo, site, moderno, iniciante, gama academy">
+    <meta http-equiv="X-UA-Compatible " content="IE=edge ">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!--FONTE UBUNTU -->
@@ -43,7 +47,7 @@
       </article>
 
       <aside>
-        <img src="../assets/img/blog.png" alt="" />
+        <img class="sumir"  src="../assets/img/blog.png" alt="" />
       </aside>
     </main>
 
