--- a/pages/contato.html
+++ b/pages/contato.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="autor " content="Silvan Miller ">
     <meta name="description " content="Site desenvolvido por Silvan Miller ">
-    <meta name="keywords " content="front-end, completo, site, moderno, iniciante ">
+    <meta name="keywords " content="front-end, completo, site, moderno, iniciante, gama academy">
     <meta http-equiv="X-UA-Compatible " content="IE=edge ">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
@@ -58,7 +58,7 @@
           </article>
 
           <aside>
-              <img src="../assets/img/contato.png" alt="imagens de contato">
+              <img class="sumir"  src="../assets/img/contato.png" alt="imagens de contato">
           </aside>
     </main>
 
