--- a/pages/curso.html
+++ b/pages/curso.html
@@ -2,6 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <meta name="autor " content="Silvan Miller ">
+    <meta name="description " content="Site desenvolvido por Silvan Miller ">
+    <meta name="keywords " content="front-end, completo, site, moderno, iniciante, gama academy">
+    <meta http-equiv="X-UA-Compatible " content="IE=edge ">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!--FONTE UBUNTU -->
@@ -34,7 +38,7 @@
     <main>
 
       <aside>
-        <img src="../assets/img/imagem5.png" alt="" />
+        <img class="sumir"  src="../assets/img/imagem5.png" alt="" />
       </aside>
 
       <article>
@@ -53,7 +57,7 @@
 
     <main>
        <aside>
-        <img src="../assets/img/imagem6.png" alt="" />
+        <img class="sumir" src="../assets/img/imagem6.png" alt="" />
       </aside>
 
       <article>
@@ -70,7 +74,7 @@
 
     <main>
        <aside>
-        <img src="../assets/img/imagem4.png" alt="" />
+        <img class="sumir" src="../assets/img/imagem4.png" alt="" />
       </aside>
 
       <article>
