--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <meta name="autor " content="Silvan Miller ">
+    <meta name="description " content="Site desenvolvido por Silvan Miller ">
+    <meta name="keywords " content="front-end, completo, site, moderno, iniciante, gama academy">
+    <meta http-equiv="X-UA-Compatible " content="IE=edge ">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!--FONTE UBUNTU -->
@@ -46,7 +50,7 @@
           </article>
 
                 <aside>
-                      <img src="./assets/img/imagem7.png" alt="" />
+                      <img class="sumir" src="./assets/img/imagem7.png" alt="" />
                 </aside>
     </main>
 
