--- a/pages/post.html
+++ b/pages/post.html
@@ -2,6 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <meta name="autor " content="Silvan Miller ">
+    <meta name="description " content="Site desenvolvido por Silvan Miller ">
+    <meta name="keywords " content="front-end, completo, site, moderno, iniciante, gama academy">
+    <meta http-equiv="X-UA-Compatible " content="IE=edge ">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!--FONTE UBUNTU -->
