--- a/pages/cursos.html
+++ b/pages/cursos.html
@@ -38,6 +38,7 @@
       </nav>
     </header>
 
+    <!-- Titulo da materia -->
     <main>
       <article>
         <h3 class="titleRs">Investimento para iniciantes</h3>
@@ -53,21 +54,29 @@
       </article>
 
       <aside>
-        <img class="sumir" src="../assets/img/imagem5.png" alt="" />
+        <picture class="elementos">
+          <!-- <source class="sumir" media="(min-width: 842px)"srcset="../assets/img/imagem1.png"/> -->
+          <img class="sumir" src="../assets/img/imagem5.png" alt="" />
+        </picture>
       </aside>
     </main>
 
-    <main class="containerBG">
+    <main class="containerBG wrapp">
       <article>
-        <iframe
-          width="460"
-          height="215"
-          src="https://www.youtube.com/embed/cWMT--FNGHQ"
-          title="YouTube video player"
-          frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-          allowfullscreen
-        ></iframe>
+        <div class="video">
+          <div class="areaVideo">
+            <iframe
+              width="462"
+              height="261"
+              src="https://www.youtube.com/embed/cWMT--FNGHQ"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+              allowfullscreen
+            >
+            </iframe>
+          </div>
+        </div>
       </article>
 
       <aside>
@@ -86,21 +95,32 @@
       </aside>
     </main>
 
-    <main class="containerBG">
+    <!-- linha de divisão -->
+    <div class="containerBG linha">
+      <hr />
+      <!-- <img src="../assets/img/linha.png" alt="Linha de divisão" /> -->
+    </div>
+
+    <main class="containerBG wrapp">
       <article>
-        <iframe
-          width="460"
-          height="215"
-          src="https://www.youtube.com/embed/cWMT--FNGHQ"
-          title="YouTube video player"
-          frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-          allowfullscreen
-        ></iframe>
+        <div class="video">
+          <div class="areaVideo">
+            <iframe
+              width="462"
+              height="261"
+              src="https://www.youtube.com/embed/cWMT--FNGHQ"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+              allowfullscreen
+            >
+            </iframe>
+          </div>
+        </div>
       </article>
 
       <aside>
-        <h3 class="titleRs">Aula 1</h3>
+        <h3 class="titleRs">Aula 2</h3>
 
         <p class="mediumTitle">
           Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut
@@ -115,21 +135,30 @@
       </aside>
     </main>
 
-    <main class="containerBG">
+    <!-- linha de divisão -->
+    <div class="containerBG linha">
+      <hr />
+      <!-- <img src="../assets/img/linha.png" alt="Linha de divisão" /> -->
+    </div>
+
+    <main class="containerBG wrapp">
       <article>
-        <iframe
-          width="460"
-          height="215"
-          src="https://www.youtube.com/embed/cWMT--FNGHQ"
-          title="YouTube video player"
-          frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-          allowfullscreen
-        ></iframe>
+        <div class="video">
+          <div class="areaVideo">
+            <iframe
+              src="https://www.youtube.com/embed/cWMT--FNGHQ"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+              allowfullscreen
+            >
+            </iframe>
+          </div>
+        </div>
       </article>
 
       <aside>
-        <h3 class="titleRs">Aula 1</h3>
+        <h3 class="titleRs">Aula 3</h3>
 
         <p class="mediumTitle">
           Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut
@@ -147,7 +176,7 @@
     <!-- Inicio do Rodape -->
     <footer id="footer">
       <section>
-        <a href="./index.html"><img src="../assets/img/logofooter.png" /></a>
+        <a href="/index.html"><img src="../assets/img/logofooter.png" /></a>
       </section>
 
       <nav>
